# telegram-mt4-bridge

./: .env.example  .gitignore  HANDOFF.md  README.md  RESUME.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-05-29-telegram-mt4-bridge.md
docs/superpowers/specs/: 2026-05-29-telegram-mt4-bridge-design.md
mt4/: mt4_bridge.mq4
scripts/: dump_messages.py
src/: config.py  dedup.py  dry_run.py  file_bridge.py  main.py  models.py  notifier.py  order_router.py  pipeline.py  risk_guard.py  signal_parser.py  telegram_listener.py
src/telegram_mt4_bridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_config.py  test_dedup.py  test_dry_run.py  test_file_bridge.py  test_models.py  test_notifier.py  test_order_router.py  test_pipeline.py  test_real_signals.py  test_risk_guard.py  test_signal_parser.py
